UK feat: fixed the navbar and writeup paragraph

--- a/index.html
+++ b/index.html
@@ -27,11 +27,10 @@
       </nav>
     </header>
 
-    <body>
       <section>
         <div>
-          <h1 class="heading"> The World's Leading Business</h1>
-          <h2 class="heading"> Valuation Software </h2>
+          <h1 class="heading"> The World's Leading Business
+          <br> Valuation Software </h1>
           <div class="writeup">
            <p>Valutico provides the financial services industry and valuation experts with data <br>
             -driven tools to perform accurate company valuations faster and more accurately than
@@ -143,7 +142,6 @@
         <div class="divbtn btnn">
           <button class="btn"> Request a Demo </button>
       </section>
-    </body>
-    <!-- <footer></footer>
+   
   </body>
 </html>
