responsive for small devices

--- a/index.html
+++ b/index.html
@@ -9,19 +9,21 @@
   <body>
     <header>
       <nav>
+        <input type="checkbox" class="toggler">
+        <div class="menu-box"></div>
         <div class="logo">
           <img src="./images/logo.png" alt="logo" />
         </div>
         <div class="links">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="##">Solutions</a></li>
-            <li><a href="###">Your work</a></li>
+            <li class="list-item"><a href="#">Home</a></li>
+            <li class="list-item"><a href="##">Solutions</a></li>
+            <li class="list-item"><a href="###">Your work</a></li>
             <li><a href="####">Company</a></li>
           </ul>
         </div>
         <div class="divbtn">
-          <button class="btn">Request a Demo <i class="fas fa-external-link-alt"></i>
+          <button class="btn navbtn">Request a Demo <i class="fas fa-external-link-alt"></i>
           </button>
         </div>
       </nav>
